--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
 @import url("./blocks/button/_main/button_main.css");
 @import url("./blocks/button/_submit/button_submit.css");
 @import url("./blocks/button/_more/button_more.css");
+@import url("./blocks/button/_disabled/button_disabled.css");
 @import url("./blocks/poster/poster.css");
 @import url("./blocks/poster/__title/poster__title.css");
 @import url("./blocks/menu/menu.css");
@@ -71,6 +72,7 @@
 @import url("./blocks/footer/__content/footer__content.css");
 @import url("./blocks/footer/__link/footer__link.css");
 @import url("./blocks/footer/__links/footer__links.css");
+
 @import url("./blocks/footer/__text/footer__text.css");
 @import url("./blocks/footer/__copyright/footer__copyright.css");
 @import url("./blocks/search/search.css");
@@ -109,6 +111,7 @@
 @import url("./blocks/footernav/__links/footernav__links.css");
 @import url("./blocks/footernav/__links-item/footernav__links-item.css");
 @import url("./blocks/footernav/__links-item/_style/footernav__links-items_style_highlighted.css");
+@import url("./blocks/footernav/__links-item/_style/footernav__links-items_style_disabled.css");
 @import url("./blocks/footernav/__text/footernav__text.css");
 @import url("./blocks/main/main.css");
 @import url("./blocks/main/_style/main_style_fullframe.css");
@@ -126,6 +129,19 @@
 @import url("./blocks/burger/__menu/burger__menu.css");
 @import url("./blocks/burger/__menu-container/burger__menu-container.css");
 
+@import url("./blocks/infotooltip/infotooltip.css");
+@import url("./blocks/infotooltip/__message/infotooltip__message.css");
+@import url("./blocks/infotooltip/_type/infotooltip_type_error.css");
+@import url("./blocks/infotooltip/_type/infotooltip_type_sucess.css");
+
+@import url("./blocks/popup/popup.css");
+@import url("./blocks/popup/__container/popup__container.css");
+@import url("./blocks/popup/_opened/popup_opened.css");
+@import url("./blocks/popup/_size/popup__size_l.css");
+@import url("./blocks/popup/_size/popup__size_m.css");
+@import url("./blocks/popup/_size/popup__size_s.css");
+@import url("./blocks/popup/_theme/popup_theme_dark.css");
+@import url("./blocks/popup/_theme/popup_theme_neutral.css");
 /* * {*/
 /*  outline: 1px solid #e1e1e1;*/
 /*}*/
