--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -40,19 +40,25 @@
 }
 
 .preloader {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 9999;
     padding: 20px;
 }
 
 .preloader__container {
     width: 100px;
     height: 100px;
-    position: relative;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto auto;
+
 }
 
 .preloader__round {
@@ -61,7 +67,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background: #FF6838;
+    background: #2be080;
     border-radius: 50px;
 }
 
@@ -83,6 +89,6 @@
 
 .preloader__round::before {
     z-index: 10;
-    background: #FF6838;
+    background: #2be080;
     animation: preloader-inside-red 1s ease-in-out infinite;
 }
